--- a/starters/adoc/modules/parent-pom/pages/about.adoc
+++ b/starters/adoc/modules/parent-pom/pages/about.adoc
@@ -25,9 +25,9 @@ You'll see that it is used by both the xref:docs:starters:helloworld.adoc[HelloW
 
 == Relationship to other POMs
 
-The diagram below shows how the parent POM relates to other POMs:
+The diagram below shows how the starter POM (on the right hand side) relates to other POMs:
 
-image::parent-pom.drawio.svg[]
+image::pom-hierarchy.drawio.png[]
 
 
 As the diagram shows, the parent POM inherits two Spring Boot parent POMs: directly from `org.springframework.boot:spring-boot-starter-parent`, and transitively inherits from `org.springframework.boot:spring-boot-dependencies`.
