ISIS-3171 table is shown, hidden/disabled/name not correctly set yet

--- a/incubator/clients/kroviz/adoc/modules/kroviz/partials/design/collection_layout_aggregation_diagram.adoc
+++ b/incubator/clients/kroviz/adoc/modules/kroviz/partials/design/collection_layout_aggregation_diagram.adoc
@@ -64,12 +64,13 @@ together {
     }
     class ObjectDM <<(M,orange)DisplayModel>> #lightyellow {
         layout
-        collectionDmMap
+        collectionModelList
         data: Exposer
         readyToRender()
     }
     class ObjectLayout <<(L,orange)Layout>> #pink {
         grid
+        collectionLayoutList
         readyToRender()
     }
     ObjectAggregator --> ObjectDM
@@ -86,19 +87,21 @@ together {
         isParentedCollection()
     }
     class CollectionDM <<(M,coral)DisplayModel>> #lightyellow {
+        id
         layout
         data[]: Exposer
         readyToRender()
     }
     class CollectionLayout <<(L,coral)Layout>> #pink{
         numberOfColumns
-        propertySpecificationMap
+        propertySpecificationList
         readyToRender()
     }
     CollectionAggregator --> CollectionDM
     CollectionDM --> CollectionLayout
 }
 ObjectDM o-r-> CollectionDM
+ObjectLayout o-> CollectionLayout
 
 ' references between Layout and TO classes
 CollectionLayout ..> TObject : handles
